2008-08-29	Michael Dietrich	<mdt@pyneo.org>

	* remove auto-detect-magic
	* Change API to org.pyneo

2008-06-16	Michael Dietrich	<mdt@pyneo.org>

	* dbus server now completly in vala
	* move more logic into vala
	* back to good old pyneo prject. gsm0710d is part of pyneo, not
	  freesmartphone

2008-04-28	Michael Dietrich	<mdt@pyneo.org>

	* marcel holtmanns patch applied
	* error checks on snprintf
	* auto detect pm path

2008-04-28	Michael Dietrich	<mdt@pyneo.org>

	* Add power management functions
	* Improve stability

2008-04-28	Michael Lauer	<mickey@openmoko.org>

	* Change interface name to org.freesmartphone.GSM.MUX, Release as 0.9.1

2008-03-28	Michael Lauer	<mickey@openmoko.org>

	* Clean up build, release as 0.9.0

2008-02-28	Michael Dietrich	<mdt@pyneo.org>

	* src/gsm0710muxd.c: catch up with device node changes in openmoko-kernel 2.6.24
	* data/gsm0710muxd: reincarnate useful init.d script

2008-02-17	Michael Lauer	<mickey@openmoko.org>

	* data/Makefile.am: fix invalid directory, system services
	go into dbus system-services directory

2008-02-07	Michael Lauer	<mickey@openmoko.org>

	* configure.ac data/Makefile.am data/org.freedesktop.GSM.MUX.service.in:
	ship dbus service file
	* data/gsm0710muxd: remove useless init script, activation goes
	via dbus now

2008-02-05	Michael Lauer	<mickey@openmoko.org>

	* data/Makefile.am: ship dbus service configuration file

2008-01-15	Michael Lauer 	<mickey@openmoko.org>

	* Autotoolize

2007-08-01	Michael Dietrich	<mdt@pyneo.org>

	* add dbus functionality

2007-06-01	Michael Dietrich	<mdt@pyneo.org>

	* simplify init code

2007-04-01	Michael Dietrich	<mdt@pyneo.org>

	* initial version