@@ -1,3 +1,3 @@
-M. Dietrich (coding)
+M. Dietrich <mdt@pyneo.org> (coding)
 M. Holtmann (build, code fixes)
 M. Lauer (build)
